# CG-20261

./: README.md
CubeMap/: main.cpp
OpenGLViewer/: CMakeLists.txt  README.md
OpenGLViewer/include/KHR/: khrplatform.h
OpenGLViewer/include/glad/: glad.c  glad.h
OpenGLViewer/shaders/: grid.frag  grid.vert  phong.frag  phong.vert  wire.frag
OpenGLViewer/src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  main.cpp
exercicioOBJ/: CMakeLists.txt  README.md  main.cpp
